--- a/style/style.css
+++ b/style/style.css
@@ -115,3 +115,28 @@ iframe{
 	margin-left: 10px;
 }
 
+html {
+	 scroll-behavior: smooth;
+	 }
+
+
+#btn-default{
+	background: green;
+	border-radius: 5px;
+	padding: 10px;
+	color: white;
+	font-size: 16px;
+	position: relative;
+	margin-left: 50px;
+	margin-bottom: 15px;
+	width: 100px;
+}
+
+#fin{
+	position: relative;
+	bottom:14px;
+}
+
+a{
+	color:white;
+}
