--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 /*balise général */
 h1{
     color:white;
-    font-size: 11px;
+    font-size: 30px;
     position: relative;
     margin-left: 10px;
     top: 15px;
@@ -39,7 +39,7 @@ header{
     width: 60%;
     margin: 0 auto;
     padding: 20px;
-    text-align: center;
+
     
     
     
@@ -67,7 +67,7 @@ nav{
     top:0;
     left:0;
     margin-left: 1em;
-    height: 30%;
+    height: 70%;
     display: flex;
     align-items: center;
 }
@@ -100,7 +100,7 @@ top:7px;
 }
 
 nav ul{
-    margin: 0;
+    margin-top: 30px;
     padding:0;
     list-style: none;
 }
@@ -148,39 +148,120 @@ nav a:hover{
     position: fixed;
 }
 
+#moi{
+    position: relative;
+    height: 150px;
+    margin-top: 150px;
+    border-radius: 50%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#titre_competence{
+    position: relative;
+    text-align: center;
+    text-align: center;
+    top: 2px;
+       text-transform: uppercase;
+       font-family: verdana;
+       font-size: 35px;
+       font-weight: 700;
+       color: black;
+       text-shadow: 1px 1px 1px #919191,
+           1px 2px 1px #919191,
+           1px 3px 1px #919191,
+           1px 4px 1px #919191,
+           1px 5px 1px #919191,
+           1px 6px 1px #919191,
+           1px 7px 1px #919191,
+           1px 8px 1px #919191,
+           1px 9px 1px #919191,
+           1px 10px 1px #919191,
+       1px 18px 6px rgba(16,16,16,0.4),
+       1px 22px 10px rgba(16,16,16,0.2),
+       1px 25px 35px rgba(16,16,16,0.2),
+       1px 30px 60px rgba(16,16,16,0.4)
+}
 /*première section*/
 #profil{
     background-color: white;
     border-radius: 13px;
-    margin-top: 82px;
+    margin-top: 8px;
     opacity: 0.7;
     position:relative;
     top:35px; 
-    padding: 10px;
+    padding: 70px;
+    font-size: 25px;
+    
 }
 
 /*deuxième section */
 #formation{
+    margin-top: 150px;
     background-color: white;
     border-radius: 13px;
     position: relative;
     opacity: 0.7;
+    padding: 20px;
 }
 
+.formationp{
+    font-size: 20px;
+}
+
+#ma_formation{
+    position: relative;
+    position: relative;
+    text-align: center;
+    text-align: center;
+    top: 2px;
+       text-transform: uppercase;
+       font-family: verdana;
+       font-size: 35px;
+       font-weight: 700;
+       color: black;
+       text-shadow: 1px 1px 1px #919191,
+           1px 2px 1px #919191,
+           1px 3px 1px #919191,
+           1px 4px 1px #919191,
+           1px 5px 1px #919191,
+           1px 6px 1px #919191,
+           1px 7px 1px #919191,
+           1px 8px 1px #919191,
+           1px 9px 1px #919191,
+           1px 10px 1px #919191,
+       1px 18px 6px rgba(16,16,16,0.4),
+       1px 22px 10px rgba(16,16,16,0.2),
+       1px 25px 35px rgba(16,16,16,0.2),
+       1px 30px 60px rgba(16,16,16,0.4)
+}
 #compétences{
     background-color: white;
     border-radius: 13px;
-    margin-top: 50px;
+    margin-top: 100px;
     opacity: 0.7;
     position:relative;
+    padding: 10px;
 }
+
+#competence_p p{
+    position: relative;
+    font-size: 25px;
+}
+
 progress{
     width: 50%;
 }
 
 .formation-date{
+    position: relative;
+    left: 20px;
     text-decoration: underline;
     margin-top: 10px;
+    font-size: 25px;
+    position: relative;
+
 }
 
 span{
@@ -193,31 +274,51 @@ span{
     border-radius: 13px;
     margin-bottom: 15px;
     opacity: 0.7;
+    margin-top: 120px;  
+
 }
 
 #titre_projet{
-    margin-top: 15px;
-    position: relative;
-    top:45px;
-    margin-bottom: 50px;
-    margin-left: 40px;    
+     position: relative;
+     text-align: center;
+     top: 10px;
+        text-transform: uppercase;
+        font-family: verdana;
+        font-size: 35px;
+        font-weight: 700;
+        color: black;
+        text-shadow: 1px 1px 1px #919191,
+            1px 2px 1px #919191,
+            1px 3px 1px #919191,
+            1px 4px 1px #919191,
+            1px 5px 1px #919191,
+            1px 6px 1px #919191,
+            1px 7px 1px #919191,
+            1px 8px 1px #919191,
+            1px 9px 1px #919191,
+            1px 10px 1px #919191,
+        1px 18px 6px rgba(16,16,16,0.4),
+        1px 22px 10px rgba(16,16,16,0.2),
+        1px 25px 35px rgba(16,16,16,0.2),
+        1px 30px 60px rgba(16,16,16,0.4);
+    
+    
 }
 
-label{
-    white-space:normal;
-    width: 100%;
-    }
-    
+
     .projet1 {
+        
         font-size: 20px;
-        margin-bottom: 12px;
+        margin-bottom: 20px;
+        margin-top: 20px;
         position: relative;
+        text-align: center;
     }
 
     .projet2 {
         font-size: 21px;
         margin-bottom: 12px;
-        z-index: -1;
+        text-align: center;
         position: relative;
     }
 
@@ -228,6 +329,9 @@ label{
     #photo{
         position: relative;
         bottom: 30px;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
     }
   
   
@@ -235,8 +339,11 @@ label{
     #camera_thermique{
         position: relative;
         margin-bottom: 50px;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
     }
-    
+
     
 /*quatrième section */
 #le_reste{
@@ -245,6 +352,8 @@ label{
     opacity: 0.7;
     position: relative;
     bottom: 24px;
+    margin-top: 120px;
+    text-align: center;
     
 }
 
@@ -253,6 +362,7 @@ label{
     opacity: 0.7;
     margin-top: 20px;
     border-radius: 5px;
+    text-align: center;
 }
 
 #linkedin{
@@ -300,7 +410,6 @@ width: 150px;
 
     .cv{
         grid-column: 1/3;
-        margin-top: 10px;
 
     }
 
@@ -310,6 +419,7 @@ width: 150px;
         display: flex;
         justify-content: flex-end;
         align-items: center ;
+        height: 50px;
     }
 
     nav a{
@@ -344,80 +454,29 @@ width: 150px;
         margin-bottom: 0;
     }
 
+  
+}
+@media screen and (max-width:800px) {
+    #profil{
+        font-size:20px;
+    }
 
+    #titre_competence{
+        font-size: 20px;
+    }
 
+    #ma_formation{
+        font-size: 20px;
+    }
 }
 
 @media (min-width: 1100px){
     .content{
         max-width: 1100px;
     }
+    
+  
 }
 
 
 
-/*media pour l'impression */
-
-@media print {
-    /* *{
-        size:A4 ;
-    } */
-    h1{
-        display: none;
-    }
-
-    .fond{
-        display: none;
-    }
-    .content{
-        position: relative;
-        bottom: 85px;
-    }
-  
-    #photo{
-        display: none;
-    }
-    
-    #camera_thermique{
-        display: none;
-    }
-
-
-
-
-    #formation{
-        position: relative;
-        margin-bottom:12px;
-    }
-
-    .formation-date{
-        text-decoration: underline;
-        margin-bottom: 5px;
-    }
-
-    #profil{
-        position: relative;
-        margin-bottom: 10px;
-    }
-
-    progress{
-        display: none;
-        width: 0;
-        position: relative;
-        
-    }
-
-    span {
-        display: flex;
-    }
-    #contact{
-        display: none;
-    }
-
-    #titre{
-        margin-top: 0px;
-        position: relative;
-        top:50px;
-       
-    }
-  }
