--- a/css/style.css
+++ b/css/style.css
@@ -8,23 +8,19 @@
 
 /*balise général */
 h1{
-    color:white;
-    font-size: 30px;
-    position: relative;
-    margin-left: 10px;
-    top: 15px;
+    font-size: 25px;
 }
-
 a{
     text-decoration: none;
     color: black;
 }
 
-.titre{
-    font-size: 15px;
+.margin-top{
+    margin-top: 10px;
 }
 
-/* navigation */
+/* navbar*/
+
 :root{
     --background:grey;
     
@@ -407,6 +403,7 @@ width: 150px;
 
 /* responsive */
 @media screen and (min-width:800px){
+ 
     .nav-toggle-label{
         display: none;
     }
@@ -416,11 +413,7 @@ width: 150px;
         grid-template-columns: 1fr auto minmax(600px, 3fr) 1fr;
     }
 
-    .cv{
-        grid-column: 1/3;
-
-    }
-
+   
     nav{
         all:unset;
         grid-column: 3/4;
@@ -461,11 +454,16 @@ width: 150px;
         margin-left: 3em;
         margin-bottom: 0;
     }
-
-  
+ 
 }
 
-@media screen and (max-width:800px) {
+@media screen and (max-width:1000px) {
+    .titre{
+        position: relative;
+        margin-left: 10px;
+        top: 15px;
+        font-size: 14px;
+    }
     #profil{
         font-size:13px;
         width: 270px;
@@ -502,14 +500,9 @@ width: 150px;
         height: 100px;
     }
 }
-
-@media (min-width: 1100px){
-    .content{
-        max-width: 1100px;
-    }
     
   
-}
+
 
 
 
